# jsauce

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.py  jsauce.py  main.py  pyproject.toml  requirements.txt  setup.py
samples/: app.starbucks.com_endpoint_stats.json  app.starbucks.com_endpoints_detailed.json
src/: config.py
src/handlers/: ArgumentHandler.py  DomainHandler.py  InputFileHandler.py  InputHandler.py  OutFileHandler.py
src/utils/: Banner.py  Logger.py
templates/: endpoints-old.txt  endpoints.txt
templates/admin/: admin-panels.yaml  config.yaml  debug.yaml  monitoring.yaml  user-management.yaml
templates/api/: api-endpoints.yaml  graphql.yaml  microservices.yaml  rest.yaml  webhooks.yaml  websockets.yaml
templates/auth/: authentication.yaml  oauth.yaml  sessions.yaml  tokens.yaml
templates/business/: analytics.yaml  ecommerce.yaml  payment.yaml  social.yaml
templates/cloud/: aws.yaml  azure.yaml  gcp.yaml  metadata.yaml
templates/endpoints/: Endpoints.yaml
templates/framework/: angular.yaml  nextjs.yaml  react.yaml  vue.yaml  wordpress.yaml
templates/misc/: errors.yaml  files.yaml  media.yaml  operations.yaml  testing.yaml
templates/mobile/: detection.yaml
templates/security/: Sinks.yaml
templates/security/crypto/: crypto-misuse.yaml  storage-crypto-sinks.yaml  weak-crypto.yaml
templates/security/framework/: framework-security-sinks.yaml
templates/security/injection/: command-injection.yaml  ldap-injection.yaml  nosql-injection.yaml  sql-injection.yaml
templates/security/misc/: clickjacking.yaml  csrf.yaml  info-disclosure-sinks.yaml  open-redirect.yaml  redirect-request-sinks.yaml  ssrf.yaml  timing-regex-sinks.yaml
templates/security/xss/: dom-xss.yaml  reflected-xss.yaml  stored-xss.yaml
testing/: input_test.txt
